--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.6.0",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.21",
     "boxicons": "2.1.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.537.0",
+    "reka-ui": "^2.4.1",
+    "shadcn-vue": "^2.2.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "vue": "^3.5.17",
     "vue-plyr": "^7.0.0",
     "vue-router": "^4.5.1"
@@ -24,6 +32,8 @@
   },
   "trustedDependencies": [
     "@tailwindcss/oxide",
-    "core-js"
+    "core-js",
+    "esbuild",
+    "vue-demi"
   ]
 }
